Project Angel/First Rendition/jbob.001/k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: task-api
  labels:
    name: task-api
